--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
     <head>
         <title>Flower store</title>
-<<<<<<< HEAD
-        <link rel="icon" href="./assets/img/logopage.jpg" />
-=======
         <link rel="icon" href="./assets/img/thuyheo.jpg" />
->>>>>>> a9e1d71ea3e90c0190a54b6d5a8ea3181655683a
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="./assets/fonts/Montserrat.css" />
@@ -141,9 +137,10 @@
                     </div>
                 </div>
 
+                    <!-- new product -->
                 <div class="new__product grid wide">
                     <div class="row new__product-title">
-                        <h1 class="banner-title new__product-topic col l-12 m-12 c-12">new arrival items!</h1>
+                        <h1 class="banner-title new__product-topic col l-12 m-12 c-12">new arrivals!</h1>
                     </div>
 
                     <div class="row new__product-list">
@@ -313,6 +310,230 @@
                                     <del class="new__product-item-old-price"> $25.00 </del>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                    <!-- banner -->
+                <div class="banner grid wide">
+                    <div class="row banner-list">
+                        <div class="col l-6 m-12 c-12">
+                            <div class="banner-item">
+                                <img src="./assets/img/banner1.jpg" alt="-30% offer" class="banner-img" />
+                            </div>
+                        </div>
+ 
+                        <div class="col l-6 m-12 c-12">
+                            <div class="banner-item">
+                                <img src="./assets/img/banner2.jpg" alt="-30% offer" class="banner-img" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- top products -->
+                <div class="new__product grid wide">
+                    <div class="row new__product-title">
+                        <h1 class="banner-title new__product-topic col l-12 m-12 c-12">top product!</h1>
+                    </div>
+
+                    <div class="row new__product-list">
+                        <div class="col l-3 m-6 c-6 new__product-item">
+                            <div class="new__product-img">
+                                <img src="./assets/img/product1.png" alt="product 1" />
+                                <div class="new__product-deal">10%</div>
+
+                                <ul class="new__product-badge">
+                                    <li class="new__product-badge-item"><i class="fas fa-search"></i></li>
+                                    <li class="new__product-badge-item">add to cart</li>
+                                    <li class="new__product-badge-item"><i class="fas fa-random"></i></li>
+                                </ul>
+                            </div>
+
+                            <div class="new__product-item-info">
+                                <h3 class="new__product-item-name">PINK FLOWER TREE</h3>
+                                <div class="new__product-item-price">
+                                    <p class="new__product-item-new-price">$18.00</p>
+                                    <del class="new__product-item-old-price"> $21.00 </del>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col l-3 m-6 c-6 new__product-item">
+                            <div class="new__product-img">
+                                <img src="./assets/img/product2.png" alt="product 1" />
+                                <div class="new__product-deal">hot</div>
+
+                                <ul class="new__product-badge">
+                                    <li class="new__product-badge-item"><i class="fas fa-search"></i></li>
+                                    <li class="new__product-badge-item">add to cart</li>
+                                    <li class="new__product-badge-item"><i class="fas fa-random"></i></li>
+                                </ul>
+                            </div>
+
+                            <div class="new__product-item-info">
+                                <h3 class="new__product-item-name">PREMIUM JOYFUL</h3>
+                                <div class="new__product-item-price">
+                                    <p class="new__product-item-new-price">$18.00</p>
+                                    <p class="new__product-item-old-price"></p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col l-3 m-6 c-6 new__product-item">
+                            <div class="new__product-img">
+                                <img src="./assets/img/product3.png" alt="product 1" />
+                                <div class="new__product-deal">12%</div>
+
+                                <ul class="new__product-badge">
+                                    <li class="new__product-badge-item"><i class="fas fa-search"></i></li>
+                                    <li class="new__product-badge-item">add to cart</li>
+                                    <li class="new__product-badge-item"><i class="fas fa-random"></i></li>
+                                </ul>
+                            </div>
+
+                            <div class="new__product-item-info">
+                                <h3 class="new__product-item-name">THE WHITE ROSE</h3>
+                                <div class="new__product-item-price">
+                                    <p class="new__product-item-new-price">$16.00</p>
+                                    <del class="new__product-item-old-price"> $19.00 </del>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col l-3 m-6 c-6 new__product-item">
+                            <div class="new__product-img">
+                                <img src="./assets/img/product4.png" alt="product 1" />
+                                <div class="new__product-deal">hot</div>
+
+                                <ul class="new__product-badge">
+                                    <li class="new__product-badge-item"><i class="fas fa-search"></i></li>
+                                    <li class="new__product-badge-item">add to cart</li>
+                                    <li class="new__product-badge-item"><i class="fas fa-random"></i></li>
+                                </ul>
+                            </div>
+
+                            <div class="new__product-item-info">
+                                <h3 class="new__product-item-name">RED ROSE BOUQUET</h3>
+                                <div class="new__product-item-price">
+                                    <p class="new__product-item-new-price">$20.00</p>
+                                    <del class="new__product-item-old-price"> </del>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- banner full -->
+                <div class="banner grid wide">
+                    <div class="row banner-list">
+                        <div class="col l-12 m-12 c-12">
+                            <div class="banner-item">
+                                <img src="./assets/img/deal.jpg" alt="-30% offer" class="banner-img" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            
+                    <!-- latest news -->
+                <div class="latest grid wide">
+                    <div class="row new__product-title">
+                        <h1 class="banner-title new__product-topic col l-12 m-12 c-12">latest news!</h1>
+                    </div>
+
+                    <div class="row new__product-list">
+                        <div class="col l-4 m-12 c-12 new__product-item">
+                            <div class="new__product-img">
+                                <img src="./assets/img/new1.jpg" alt="product 1" />
+                            </div>
+
+                            <div class="latest__news-latest-info">
+                               <div class="latest__news-detail">
+                                   <p class="latest__news-date">
+                                    Sep 02, 2021
+                                   </p>
+                                   <div class="latest__news-comment">
+                                        <i class="far fa-comment-dots"></i>
+                                    2
+                                   </div>
+                               </div>
+
+                               <h4 class="latest__news-description">
+                                  Lorem ipsum dolor sit amet con adipisicing elit sed 
+                               </h4>
+                            </div>
+                        </div>
+
+                        <div class="col l-4 m-12 c-12 new__product-item">
+                            <div class="new__product-img">
+                                <img src="./assets/img/new2.jpg" alt="product 1" />
+                            </div>
+
+                            <div class="latest__news-latest-info">
+                                <div class="latest__news-detail">
+                                    <p class="latest__news-date">
+                                     Sep 02, 2021
+                                    </p>
+                                    <div class="latest__news-comment">
+                                         <i class="far fa-comment-dots"></i>
+                                     2
+                                    </div>
+                                </div>
+ 
+                                <h4 class="latest__news-description">
+                                   Lorem ipsum dolor sit amet con adipisicing elit sed 
+                                </h4>
+                             </div>
+                        </div>
+
+                        <div class="col l-4 m-12 c-12 new__product-item">
+                            <div class="new__product-img">
+                                <img src="./assets/img/new3.jpg" alt="product 1" />
+                            </div>
+
+                            <div class="latest__news-latest-info">
+                                <div class="latest__news-detail">
+                                    <p class="latest__news-date">
+                                     Sep 02, 2021
+                                    </p>
+                                    <div class="latest__news-comment">
+                                         <i class="far fa-comment-dots"></i>
+                                     2
+                                    </div>
+                                </div>
+ 
+                                <h4 class="latest__news-description">
+                                   Lorem ipsum dolor sit amet con adipisicing elit sed 
+                                </h4>
+                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="brand grid">
+                    <div class="brand_list">
+                        <div class="brand-item">
+                            <img src="./assets/img/qc1.png" alt="">    
+                        </div>
+
+                        <div class="brand-item">
+                            <img src="./assets/img/qc2.png" alt="">     
+                        </div>
+
+                        <div class="brand-item c-0">
+                            <img src="./assets/img/qc3.png" alt="">      
+                        </div>
+
+                        <div class="brand-item c-0">
+                            <img src="./assets/img/qc4.png" alt="">    
+                        </div>
+
+                        <div class="brand-item none c-0">
+                            <img src="./assets/img/qc5.png" alt="">    
+                        </div>
+
+                        <div class="brand-item none c-0">
+                            <img src="./assets/img/qc6.png" alt="">    
                         </div>
                     </div>
                 </div>
