--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
                         <div class="row">
                             <div class="col l-6">
                                 <p class="footer_author-name">
-                                    © 2021 - Copy write by Huynh Ba Thang
+                                    © 2021 - Copyright by Huynh Ba Thang
                                 </p>
                             </div>
 
