--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
             <div class="footer">
                 <div class="grid wide">
                     <div class="row footer_area">
-                        <div class="col l-2">
+                        <div class="col l-2 m-4 c-6">
                             <h4 class="footer-header">MY ACCOOUT</h4>
 
                             <ul class="footer-menu-list">
@@ -552,7 +552,7 @@
                             </ul>
                         </div>
 
-                        <div class="col l-2">
+                        <div class="col l-2 m-4 c-6">
                             <h4 class="footer-header">QUICK LINKS</h4>
 
                             <ul class="footer-menu-list">
@@ -574,7 +574,7 @@
                             </ul>
                         </div>
                         
-                        <div class="col l-2">
+                        <div class="col l-2 m-4 c-6">
                             <h4 class="footer-header">INFORMATION</h4>
 
                             <ul class="footer-menu-list">
@@ -596,7 +596,7 @@
                             </ul>
                         </div>
                         
-                        <div class="col l-2">
+                        <div class="col l-2 m-4 c-6">
                             <h4 class="footer-header">CUSTOMER SERVICE</h4>
 
                             <ul class="footer-menu-list">
@@ -618,7 +618,7 @@
                             </ul>
                         </div>
 
-                        <div class="col l-4">
+                        <div class="col l-4 m-6 c-12 footer_about-shop">
                             <h4 class="footer-header">ABOUT OUR SHOP</h4>
                             <p class="footer_shop-info">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo incididunt ut labore et dolore
@@ -645,14 +645,14 @@
                     </div>
 
                     <div class="grid wide">
-                        <div class="row">
-                            <div class="col l-6">
+                        <div class="row footer_author">
+                            <div class="col l-6 m-6 c-6">
                                 <p class="footer_author-name">
                                     © 2021 - Copy write by Huynh Ba Thang
                                 </p>
                             </div>
 
-                            <div class="col l-6 footer_author-icon">
+                            <div class="col l-6 m-6 c-6 footer_author-icon">
                                 <i class="fab fa-facebook-f"></i>
                                 <i class="fab fa-twitter" ></i>
                                 <i class="fab fa-pinterest-p"></i>
