--- a/index.html
+++ b/index.html
@@ -626,11 +626,11 @@
                             <ul class="footer_address">
                                 <li class="footer_address-item">
                                     <i class="fas fa-map-marker-alt"></i>
-                                    54/3 Ong Ich Khiem, Da Nang, VietNam
+                                    32 Hoang The Thien, Da Nang, VietNam
                                 </li>
                                 <li class="footer_address-item footer_address-item_light">
                                     <i class="fas fa-phone-alt"></i>
-                                    +84 935-217-297
+                                    +84 905-548-920
                                 </li>
                                 <li class="footer_address-item footer_address-item_light">
                                     <i class="fas fa-envelope"></i>
